# hitcon2023-badge

./: .gitignore  README.md  docker-compose.yml  docs.html  index.html  openapi.json
.github/workflows/: python.yml
apiserver/: .env.example  README.md  TODO  main.py  pyproject.toml  requirements.txt
apiserver/app/: __init__.py  config.py  dashboard.py  db.py  dependency.py  main.py  model.py
apiserver/app/router/: cardreader.py  crypto.py  dinorun.py  emoji.py  popcat.py  tap.py  user.py
apiserver/chameleon_station/: .frames.backup.py  README.md  __init__.py  __main__.py  card.py  config.py  frames.py
apiserver/script/: build_docs.py  create_db.py  create_db_prod.py  get_csv_from_emoji_table.py
apiserver/tests/: test_all.py  test_popcat.py
arduino/: README.md
arduino/chameleon/: card.ino  chameleon.ino  serial.h  serial.ino  shell.py
arduino/crypto/: brute_force_ans.cpp  config.h  crypto.h  crypto.ino  game.h  game.ino  hmac256.h  hmac256.ino  lcd.ino  main.ino
arduino/dino_run/: Card_control.py  Const.py  Controller.py  EventManager.py  Model.py  View.py  card.h  card.ino  dino_run.ino  dino_run.py  main.py
arduino/dino_run/Model/: GameObject.py  Model.py
arduino/dino_run/View/: GameObject.py  View.py
arduino/dino_run/dino_pc/: .env.example  README.md  pyproject.toml
arduino/dino_run/dino_pc/dino_pc/: aio_serial.py  cardkey.py  main.py  middlewares.py
arduino/dino_run/dino_pc/dino_pc/public/: app.js  index.html  index.js
arduino/dino_run/dino_pc/public/: index.html
arduino/dino_run/old_python/: Const.py  main.py
arduino/dino_run/old_python/View/: GameObject.py  utils.py
arduino/display/: example.ino  lcd.h
arduino/emoji_crypto/: buzz.ino  config.h  crypto.ino  emoji_crypto.ino  emoji_writer.h  emoji_writer.ino  hmac256.h  hmac256.ino
arduino/emoji_writer/: card.h  card.ino  config.h  emoji_writer.h  emoji_writer.ino  game.h  game.ino  main.ino  master_config.h  network.h  util.h  wifi.h  wifi.ino
arduino/example_change_uid/: example_change_uid.ino  util.h  util.ino
arduino/initialize_card/: README.md  extract_uid.py  initialize_card.h  initialize_card.ino  server.py
arduino/libs/: buzz.h  buzz.ino  card.h  card.ino  config.h  hmac256.h  lcd.h  lcd.ino  master_config.h  network.h  network.ino  util.h  util.ino  wifi.h  wifi.ino
arduino/popcat/: buzz.h  card.h  game.h  game.ino  network.ino  popcat.ino  wifi.h  wifi.ino
arduino/uuid_change/: example_change_uid.ino
hitcon2023-badge-mongodump/: card-reader.bson.json  convert.py  dinorun-record.bson.json  emoji-record.bson.json  popcat-record.bson.json  system.users.bson.json  system.version.bson.json  tap-record.bson.json  user.bson.json
